fix bio spacing

--- a/index.css
+++ b/index.css
@@ -269,6 +269,10 @@ figcaption {
   margin-top: var(--line-height);
 }
 
+.bio {
+  margin: 0;
+}
+
 ul, ol {
   padding: 0;
   margin: 0 0 var(--line-height);
